# wip-eaw-docs

./: .gitignore  LICENSE  readthedocs.yml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py  index.rst
eaw-xmls/: xml_structure.rst  xml_structure.txt  xml_tabbed_structure.txt
eaw_godot_doc_module_source/: setup.cfg  setup.py
eaw_godot_doc_module_source/egdocs/verification/: HashManager.py  __init__.py  classes.py
eaw_godot_doc_module_source/egdocs/xml_docs/: __init__.py  rst_utils.py  xml_builder.py  xml_classes.py  xml_constants.py  xml_inserts.py
eaw_godot_doc_module_source/egdocs/xml_docs/xml_data/: __init__.py  file_manager.py
eaw_godot_doc_module_source/egdocs/xml_docs/xml_data/data/EAW/: Factions.Xml  Guidialogs.Xml
eaw_godot_doc_module_source/egdocs/xml_docs/xml_data/data/xml_doc_templates/: xml_type_auto.rst  xml_type_auto_no_node.rst
eaw_godot_doc_module_source/src/: main.py
eaw_godot_doc_module_source/src/build_xml_docs/: xml_builder.py  xml_classes.py  xml_constants.py
eaw_godot_doc_module_source/src/xml_data/: __init__.py  zip_data.bat
eaw_godot_doc_module_source/src/xml_data/data/EAW/: Uniqueunits.Xml
eaw_godot_doc_module_source/src/xml_data/data/FOC/: Corruption_Special_Units.Xml
eaw_godot_doc_module_source/src/xml_data/data/xml_doc_templates/: xml_node_auto.rst  xml_type_auto.rst  xml_type_auto_no_node.rst
source/: build.py  conf.py  contents.rst  index.rst  readme.rst  readthedocs.yml
util_scripts/: clear_build.bat  install_module.bat  uninstall_module.bat  uninstall_module.sh  zip_data.bat
(+214 files in other folders)
