[metadata]
name = eaw_godot_doc_module
author = luke13139
version = attr: src.VERSION
url = https://wip-eaw-docs.readthedocs.io
requires =
    Cython

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
include_package_data = True
setup_requires =
    Cython

package_dir =
    =src

packages = find_namespace:


[options.packages.find]
where = src
exclude = build_xml_docs


[options.package_data]
xml_data =
    data/*/*.xml
    data/*/*.rst
